# macemu

./: .gitignore  README.md  THREADING_ARCHITECTURE.md
BasiliskII/: ChangeLog  README  TECH  TODO
BasiliskII/src/: cdrom.cpp  emul_op.cpp  main.cpp  prefs_items.cpp  rom_patches.cpp  user_strings.cpp  video.cpp
BasiliskII/src/AmigaOS/: asm_support.asm  ether_amiga.cpp  main_amiga.cpp  serial_amiga.cpp  sysdeps.h  video_amiga.cpp
BasiliskII/src/BeOS/: Makefile  main_beos.cpp  sysdeps.h  video_beos.cpp
BasiliskII/src/BeOS/SheepDriver/: Makefile  sheep_driver.c
BasiliskII/src/BeOS/SheepNet/: Makefile
BasiliskII/src/CrossPlatform/: sigsegv.cpp  video_blit.cpp  vm_alloc.cpp
BasiliskII/src/MacOSX/: AudioDevice.cpp  BasiliskII.icns  config.h  etherhelpertool.c  main_macosx.mm  startupchime.cpp  startupchime.hpp  sys_darwin.cpp  utils_macosx.h  utils_macosx.mm
BasiliskII/src/SDL/: SDLMain.m  audio_sdl.cpp  video_sdl.cpp  video_sdl2.cpp  video_sdl3.cpp
BasiliskII/src/Unix/: Makefile.in  clip_unix.cpp  configure.ac  ether_unix.cpp  main_unix.cpp  prefs_editor_gtk.cpp  prefs_editor_gtk3.cpp  sys_unix.cpp  tinyxml2.cpp  tinyxml2.h  user_strings_unix.cpp
BasiliskII/src/Unix/FreeBSD/: scsidump.cpp  (+1 more)
BasiliskII/src/Windows/: Makefile.in  config.h  configure.ac  main_windows.cpp  prefs_windows.cpp  serial_windows.cpp  sys_windows.cpp
BasiliskII/src/include/: emul_op.h  main.h
BasiliskII/src/powerrom_cpu/: cpu_emulation.h
BasiliskII/src/slirp/: debug.c  icmp_var.h  if.c  ip_icmp.c  ip_icmp.h  misc.c  sbuf.c  slirp_config.h  socket.c  tcp_input.c
BasiliskII/src/uae_cpu/: cpu_emulation.h  cpuopti.c  gencpu.c  m68k.h  newcpu.h
BasiliskII/src/uae_cpu_2021/: basilisk_glue.cpp  cpu_emulation.h  cpummu.h  gencpu.c  m68k.h  memory.h  newcpu.h
SheepShaver/doc/: PowerPC-Testsuite.txt
SheepShaver/doc/BeOS/: history.html  troubleshooting.html
SheepShaver/doc/Linux/: quickstart.html
SheepShaver/src/: rom_patches.cpp  video.cpp
SheepShaver/src/BeOS/: Makefile  video_window.h
SheepShaver/src/CrossPlatform/: sigsegv.cpp
SheepShaver/src/EthernetDriver/: sysdeps.h
SheepShaver/src/MacOSX/: Info.plist.in  etherhelpertool.c  prefs_macosx.mm
SheepShaver/src/Unix/: Makefile.in  configure.ac  main_unix.cpp  prefs_editor_gtk.cpp  user_strings_unix.cpp  video_x.cpp
SheepShaver/src/Windows/: Makefile.in  configure.ac  main_windows.cpp  prefs_windows.cpp
SheepShaver/src/include/: main.h  video_defs.h
SheepShaver/src/kpx_cpu/: ppc-dis.c  sheepshaver_glue.cpp
cxmon/: README  cxmon.1
cxmon/src/disass/: ansidecl.h  i386-dis.c  m68k-opc.c
macemu-next/: .gitignore  config.example.json  meson.build  meson_options.txt
macemu-next/.claude/: context.md
macemu-next/docs/: Architecture.md  CallbackResearch.md  Commands.md  README.md  SIMPLIFIED_INTERRUPT_APPROACH.md  STATUS_SUMMARY.md  TIMER_IMPLEMENTATION_COMPARISON.md  TIMER_IMPLEMENTATION_FINAL.md  TIMER_INVESTIGATION_RESULTS.md  TIMER_REFACTOR_PLAN.md  TodoStatus.md
macemu-next/docs/deepdive/: PlatformAPIInterrupts.md  UnicornBatchExecutionRTEBug.md
macemu-next/scripts/: BasiliskII_XPRAM  QUICK_START.md  README.md  run_traces.sh  trace-config.json  trace_analyzer.py
macemu-next/src/: main.cpp
macemu-next/src/config/: config_manager.cpp  meson.build  prefs_manager.h
macemu-next/src/core/: json_config.cpp  json_config.h  meson.build
macemu-next/src/cpu/: cpu_dualcpu.c  cpu_trace.c  cpu_trace.h  cpu_uae.c  cpu_unicorn.cpp  meson.build  uae_wrapper.cpp  unicorn_wrapper.c  unicorn_wrapper.h
macemu-next/src/drivers/: meson.build
macemu-next/src/platform/: meson.build  timer_interrupt.cpp  timer_interrupt.h  video_output.h
macemu-next/src/webrtc/: audio_encoder_thread.cpp  audio_encoder_thread.h  globals.cpp  globals.h  meson.build  video_encoder_thread.cpp  video_encoder_thread.h  webrtc_server.cpp  webrtc_server.h
macemu-next/src/webrtc/encoders/: meson.build
macemu-next/src/webrtc/http/: api_handlers.cpp  api_handlers.h  meson.build  static_files.cpp
macemu-next/src/webrtc/storage/: meson.build
macemu-next/src/webrtc/utils/: meson.build
macemu-next/src/webserver/: api_handlers.cpp  api_handlers.h  meson.build
macemu-next/tests/: meson.build
(+50 files in other folders)
